Bug 466110 - dolphin crashed when hoovering over files
Summary: dolphin crashed when hoovering over files
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-02-19 21:55 UTC by Robby Engelmann
Modified: 2023-02-21 14:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.40
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2023-02-19 21:55:57 UTC
Application: dolphin (23.03.70)
 (Compiled from sources)
Qt Version: 5.15.8
Frameworks Version: 5.104.0
Operating System: Linux 6.1.12-1-default x86_64
Windowing System: Wayland
Distribution: "openSUSE Tumbleweed"
DrKonqi: 5.27.80 [KCrashBackend]

-- Information about the crash:
dolphin crashed when hoovering over files using master git snapshots.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault

[KCrash Handler]
#4  QByteArray::QByteArray (a=..., this=0x7ffc4a8622d0) at /usr/include/qt5/QtCore/qbytearray.h:524
#5  KFileItemModel::RoleInfo::RoleInfo (this=0x7ffc4a8622d0) at /usr/src/debug/dolphin-22.11.70git.20230219T023748~e9f06fc4/src/kitemviews/kfileitemmodel.h:185
#6  DolphinView::eventFilter (this=0x55881efb30c0, watched=<optimized out>, event=0x7ffc4a862430) at /usr/src/debug/dolphin-22.11.70git.20230219T023748~e9f06fc4/src/views/dolphinview.cpp:978
#7  0x00007f83328dbf6b in QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0x55881ef3fbb0, event=event@entry=0x7ffc4a862430) at kernel/qcoreapplication.cpp:1190
#8  0x00007f83335a543e in QApplicationPrivate::notify_helper (this=this@entry=0x55881e875fe0, receiver=receiver@entry=0x55881ef3fbb0, e=e@entry=0x7ffc4a862430) at kernel/qapplication.cpp:3634
#9  0x00007f83335ade20 in QApplication::notify (this=<optimized out>, receiver=0x55881f163ec0, e=<optimized out>) at kernel/qapplication.cpp:3306
#10 0x00007f83328dc1e8 in QCoreApplication::notifyInternal2 (receiver=0x55881f163ec0, event=0x7ffc4a8625e0) at kernel/qcoreapplication.cpp:1064
#11 0x00007f83335aae79 in QApplication::event (this=0x7ffc4a862a60, e=0x7ffc4a8626f0) at kernel/qapplication.cpp:1901
#12 0x00007f83335a544e in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x7ffc4a862a60, e=0x7ffc4a8626f0) at kernel/qapplication.cpp:3640
#13 0x00007f83328dc1e8 in QCoreApplication::notifyInternal2 (receiver=0x7ffc4a862a60, event=0x7ffc4a8626f0) at kernel/qcoreapplication.cpp:1064
#14 0x00007f8332933011 in QTimerInfoList::activateTimers (this=0x55881e8a7c50) at kernel/qtimerinfo_unix.cpp:643
#15 0x00007f83329338dc in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:183
#16 idleTimerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:230
#17 0x00007f8330669a90 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#18 0x00007f8330669e48 in ?? () from /lib64/libglib-2.0.so.0
#19 0x00007f8330669edc in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#20 0x00007f8332933c16 in QEventDispatcherGlib::processEvents (this=0x55881e8a3d10, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#21 0x00007f83328dac5b in QEventLoop::exec (this=this@entry=0x7ffc4a862930, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#22 0x00007f83328e2dc6 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#23 0x00007f8332d6ed3c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1870
#24 0x00007f83335a53c5 in QApplication::exec () at kernel/qapplication.cpp:2832
#25 0x000055881cb3057a in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/dolphin-22.11.70git.20230219T023748~e9f06fc4/src/main.cpp:232
[Inferior 1 (process 3653) detached]

Reported using DrKonqi
Comment 1 Bug Janitor Service 2023-02-21 12:16:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/517
Comment 2 Aleix Pol 2023-02-21 14:18:37 UTC
Git commit fc04c8186de8433f89b9167be7c50f543d376e68 by Aleix Pol.
Committed on 21/02/2023 at 12:15.
Pushed by meven into branch 'master'.

Fix uninitialised value

Do not read m_hoveredColumnHearderRoleIndex before it has been
initialised.

.6  0x00007fe00632182c in QList<KFileItemModel::RoleInfo>::Node::t
(this=<optimized out>, this=<optimized out>) at
/usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h:153
.7  QList<KFileItemModel::RoleInfo>::at (i=3080252, this=0x7ffdf2e9bba8)
at /usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h:572
.8  DolphinView::eventFilter (this=0x5584bef25160,
watched=0x5584bef8a300, event=0x7ffdf2e9bd30) at
./src/views/dolphinview.cpp:978
.9  0x00007fe003ebbdda in
QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*,
QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
.10 0x00007fe004b6c782 in QApplicationPrivate::notify_helper(QObject*,
QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
.11 0x00007fe004b75411 in QApplication::notify(QObject*, QEvent*) ()
from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
.12 0x00007fe003ebc07a in QCoreApplication::notifyInternal2(QObject*,
QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
.13 0x00007fe004b72269 in QApplication::event(QEvent*) () from
/lib/x86_64-linux-gnu/libQt5Widgets.so.5
.14 0x00007fe004b6c793 in QApplicationPrivate::notify_helper(QObject*,
QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
.15 0x00007fe003ebc07a in QCoreApplication::notifyInternal2(QObject*,
QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
.16 0x00007fe003f14e0b in QTimerInfoList::activateTimers() () from
/lib/x86_64-linux-gnu/libQt5Core.so.5
.17 0x00007fe003f15754 in ?? () from
/lib/x86_64-linux-gnu/libQt5Core.so.5
.18 0x00007fe001d20d3b in g_main_context_dispatch () from
/lib/x86_64-linux-gnu/libglib-2.0.so.0
.19 0x00007fe001d756c8 in ?? () from
/lib/x86_64-linux-gnu/libglib-2.0.so.0
.20 0x00007fe001d1e3e3 in g_main_context_iteration () from
/lib/x86_64-linux-gnu/libglib-2.0.so.0
.21 0x00007fe003f15ad8 in
QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)
() from /lib/x86_64-linux-gnu/libQt5Core.so.5
.22 0x00007fe003eba99b in
QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from
/lib/x86_64-linux-gnu/libQt5Core.so.5
.23 0x00007fe003ec2f34 in QCoreApplication::exec() () from
/lib/x86_64-linux-gnu/libQt5Core.so.5
.24 0x00005584bd2a9aad in main (argc=<optimized out>, argv=<optimized
out>) at ./src/main.cpp:249

M  +3    -3    src/views/dolphinview.cpp
M  +1    -1    src/views/dolphinview.h

https://invent.kde.org/system/dolphin/commit/fc04c8186de8433f89b9167be7c50f543d376e68